# codesnipper

./: README.md  pyproject.toml
src/cs_cli/: charm.py  charm_models.py  codium.py  codium_models.py  config.py  constants.py  main.py  py.py  types.py  utils.py
tests/: test_cli.py  test_xml.py
