[project]
name = "cs-cli"
version = "0.1.3"
description = "Command line tool to install code snippets in different editors"
readme = "README.md"
authors = [
    { name = "PonyM", email = "dev@lksch.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic==1.10.5",
    "python-semantic-release>=8.0.8",
    "typer>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.pytest.ini_option]
testpaths = [
    "tests"
]

[project.scripts]
cs-cli = "cs_cli.main:app"
